# webservice

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: db_access.rs  errors.rs  handlers.rs  lib.rs  models.rs  routers.rs  state.rs  utils.rs
src/dbaccess/: auth.rs  course.rs  mod.rs  teacher.rs
src/handlers/: auth.rs  course.rs  general.rs  mod.rs  teacher.rs
src/models/: auth.rs  course.rs  teacher.rs
