[package]
name = "webservice"
version = "0.1.0"
edition = "2021"
default-run = "teacher-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session ={version = "0.7.1",features = ["cookie-session","redis-rs-session"]}
log = "0.4.17"
env_logger ="0.9.0"
lazy_static = "1.4.0"
actix-cors = "0.6.1"
actix-web = "4.0.1"
actix-rt = "2.7.0"
chrono = {version = "0.4.19",features = ["serde"]}
time ="0.3"
rand = "0.8.5"
dotenv = "0.15.0"
openssl = {version = "0.10.38", features = ["vendored"]}
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
sqlx = {version = "0.5.10",default-features = false,features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
]}


[[bin]]
name = "teacher-service"

[profile.release]
lto = true